<resources>
    <string name="app_name">PPE3</string>
    <string name="logo">Logo</string>
    <string name="connexion">Connexion</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="comptes_rendus">Comptes-rendus</string>
    <string name="documentation">Documentation</string>
    <string name="chat">Chat</string>
    <string name="statistiques">Statistiques</string>
    <string name="profil">Profil</string>
</resources>
