<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="#f94f51"
            android:gravity="center"
            android:onClick="goto_profil"
            android:text="@string/profil"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/comptes_rendus"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="#0d6a66"
            android:onClick="goto_compterendu"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/documentation"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="#9520fd"
            android:onClick="goto_documentation"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/chat"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="#0b78b9"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/statistiques"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="#edbe27"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>